k8s/pma_namespace.yaml
apiVersion: v1parcel.getId()
kind: Namespace
metadata:
  name: project-management-app
