k8s/pma_backend_sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: project-management-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
