k8s/pma_db_sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: project-management-app
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None # Headless service for StatefulSet
  selector:
    app: postgres
