k8s/pma_frontend_sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: project-management-app
spec:
  selector:
    app: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
