k8s/pma_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-management-ingress
  namespace: project-management-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
